--- a/PL/EngineerMainWindow.xaml
+++ b/PL/EngineerMainWindow.xaml
@@ -84,35 +84,35 @@
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBox  Grid.Row="5" Grid.Column="3" 
                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding ScheduledDate, Mode=TwoWay}" Width="200"/>
+                 Text="{Binding Path=MyTask.ScheduledDate, Mode=TwoWay}" Width="200"/>
 
             <!-- task start date  -->
             <Label Grid.Row="6" Grid.Column="1" Content="Starting Date:" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBox Grid.Row="6" Grid.Column="3"
                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding StartDate, Mode=TwoWay}"  Width="200"/>
+                 Text="{Binding Path=MyTask.StartDate, Mode=TwoWay}"  Width="200"/>
 
             <!-- task forcast date -->
             <Label Grid.Row="7" Grid.Column="1" Content="Forcast Completion Date:" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBox Grid.Row="7" Grid.Column="3" 
                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding ForecastDate, Mode=TwoWay}" Width="200"/>
+                 Text="{Binding Path=MyTask.ForecastDate, Mode=TwoWay}" Width="200"/>
 
             <!-- task end date -->
             <Label Grid.Row="8" Grid.Column="1" Content="Completion Date:" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBox Grid.Row="8" Grid.Column="3" Width="200"
                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding CompleteDate, Mode=TwoWay}" />
+                 Text="{Binding Path=MyTask.CompleteDate, Mode=TwoWay}" />
 
             <!-- task effort time -->
             <Label Grid.Row="9" Grid.Column="1" Content="Required Effort Time:" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
             <TextBox Grid.Row="9" Grid.Column="3" Width="200"
                  HorizontalAlignment="Left" VerticalAlignment="Center"
-                 Text="{Binding RequiredEffortTime, Mode=TwoWay}" />
+                 Text="{Binding Path=MyTask.RequiredEffortTime, Mode=TwoWay}" />
 
             <!-- task deliverables -->
             <Label Grid.Row="10" Grid.Column="1" Content="Deliverables:" 
