--- a/PL/EngineerIdWindow.xaml
+++ b/PL/EngineerIdWindow.xaml
@@ -8,16 +8,16 @@
         Title="EngineerIdWindow" Height="200" Width="500"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <Grid>
-        <Grid>
+        <Grid Background="#FFD3F7DB">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <Button Content="OK" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="0,100,0,0" Width="60" Grid.ColumnSpan="2"
-                  Click="OkButton_Click" />
+            <Button Content="OK" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="0,90,0,0" Width="60" Grid.ColumnSpan="2"
+                  Click="OkButton_Click" Background="White" />
         </Grid>
-        <TextBox Text="{Binding MyId, Mode=TwoWay}"  MaxLength="9" Width="120" Margin="203,74,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Label Grid.Column="0" Content="Enter your Id:" HorizontalAlignment="Left" Margin="100,65,0,0" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding MyId, Mode=TwoWay}"  MaxLength="9" Height="20" Width="120" Margin="240,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Content="Enter your Id:" HorizontalAlignment="Left" Margin="107,0,0,0" VerticalAlignment="Center" FontSize="20"/>
 
     </Grid>
 </Window>
