--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -11,16 +11,19 @@
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FFF9FAFA"/>
-                <GradientStop Color="#FF9CFADE" Offset="1"/>
+                <GradientStop Color="#FF69CBF8" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="Manager" Margin="490,167,210,167" Height="100" Width="100"
-                Click="ManagerMainWindow_Click"/>
-        <Button Content="Engineer" Height="100" Width="100" Margin="190,162,510,172"
-                Click="EngineerMainWindow_Click"/>
-        
+        <Button Content="Manager" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100" Width="200" FontFamily="Showcard Gothic" FontSize="24"
+                Click="ManagerMainWindow_Click" Background="White" Margin="100,0,0,100"/>
+        <Button Content="Engineer" HorizontalAlignment="Left" VerticalAlignment="Top" Height="100" Width="200"
+                Click="EngineerMainWindow_Click" Background="White" FontFamily="Showcard Gothic" FontSize="24" Margin="100,100,0,0"/>
+
         <!--clock-->
-        <Label Content="{Binding Path=MyClock}" Height="100" Width="100"/>
-        <Button Content="add year" Height="100" Width="100" Click="AddYear_Click" Margin="360,267,340,67"/>
+        <Label Content="{Binding Path=MyClock}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="200" FontSize="30" FontFamily="Segoe UI Black" Margin="420,190,0,0"/>
+        <Button Content="add year" Click="AddYear_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="352,242,0,0"/>
+        <Button Content="add month" Click="AddMonth_Click" FontSize="20" Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="450,242,0,0"/>
+        <Button Content="add day" Click="AddDay_Click" FontSize="20" Height="50" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" Background="White" Margin="568,242,0,0"/>
+
     </Grid>
 </Window>
